fix: checkbox not aligned center in group close #4846

--- a/components/checkbox/style/mixin.less
+++ b/components/checkbox/style/mixin.less
@@ -61,7 +61,7 @@
 
         position: absolute;
         top: 50%;
-        left: 22%;
+        left: 21.5%;
         display: table;
         width: @check-width;
         height: @check-height;
